<package>
  <name>rqt_py_trees</name>
  <version>0.4.1</version>
  <description>
    rqt_py_trees provides a GUI plugin for visualizing py_trees behaviour trees based on rqt_tf_tree.
  </description>

  <maintainer email="m.staniaszek@gmail.com">Michal Staniaszek</maintainer>
  <maintainer email="stonier@yujinrobot.com">Daniel Stonier</maintainer>
  <maintainer email="naveedhd@gmail.com">Naveed Usmani</maintainer>

  <license>BSD</license>  

  <url type="website">http://ros.org/wiki/rqt_py_trees</url>
  <url type="repository">https://github.com/stonier/rqt_py_trees</url>
  <url type="bugtracker">https://github.com/stonier/rqt_py_trees/issues</url>

  <author>Thibault Kruse</author>
  <author>Michal Staniaszek</author>
  <author>Daniel Stonier</author>
  <author>Naveed Usmani</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>py_trees</build_depend>
  <build_depend>py_trees_msgs</build_depend>
  <build_depend>rqt_bag</build_depend>

  <run_depend>geometry_msgs</run_depend>
  <run_depend>python3-rospkg</run_depend>
  <run_depend>python3-termcolor</run_depend>
  <run_depend>qt_dotgraph</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>rqt_graph</run_depend>
  <run_depend>rqt_gui</run_depend>
  <run_depend>rqt_gui_py</run_depend>
  <run_depend>py_trees</run_depend>
  <run_depend>py_trees_msgs</run_depend>
  <run_depend>rqt_bag</run_depend>
  <run_depend>unique_id</run_depend>
  <run_depend>python3-pygraphviz</run_depend>

  <test_depend>python3-mock</test_depend>

  <export>
    <rqt_gui plugin="${prefix}/plugin.xml"/>
  </export>
</package>
